Repositories implementation::max capacity