@@ -14,7 +14,7 @@
     <name>spring-boot-rest-demo</name>
     <description>spring-boot-rest-demo</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -59,6 +59,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <source>21</source>
+              <target>21</target>
+              <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
+          </plugin>
         </plugins>
     </build>
 
